# homelab-todoist-declarative

./: .gitignore  Jenkinsfile  README.md  go.mod  nuke-filters.yaml  nuke-labels.yaml  pyproject.toml  todoist.yaml
cmd/htd/: main.go  main_test.go
examples/: recurring-periodic-existing-projects.yaml  recurring-tasks.yaml  todoist.yaml
internal/config/: config.go  config_test.go
internal/export/: export.go  export_test.go
internal/output/: output.go
internal/reconcile/: apply.go  plan.go  plan_test.go  snapshot.go  taskmeta.go  types.go
internal/todoist/auth/: token.go
internal/todoist/http/: http.go
internal/todoist/sync/: client.go  client_test.go
internal/todoist/v1/: client.go  client_test.go
src/homelab_todoist_declarative/: cli.py
