[project]
name = "homelab-todoist-declarative"
version = "0.0.0"
description = "Declarative (GitOps-style) Todoist config reconciler"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Evan Rauner" }
]
dependencies = [
  "requests>=2.31.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.6.0",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.3.0",
  "mypy>=1.9.0",
]

[project.scripts]
todoist-decl = "homelab_todoist_declarative.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/homelab_todoist_declarative"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

